finished conclusion section

--- a/Rohit_Master_Thesis/6.Conclusion_Future_Works.tex
+++ b/Rohit_Master_Thesis/6.Conclusion_Future_Works.tex
@@ -1,1 +1,17 @@
-\chapter{Conclusion \& Future Works}
+\chapter{Future Works}
+
+This thesis has explored different aspects of anomaly detection, focusing on supervised and unsupervised models such as \gls{yolo}v8, PatchCore, EfficientAD, and more. However, there are several directions for extending and improving the work, as outlined below:
+
+\textbf{Exploring Newer Unsupervised Models:} Future work should explore newer and more advanced unsupervised models, particularly those utilizing vision transformer architectures, such as DINOv2\cite{oquab2023dinov2}, in the paper it has shown promising results even with just the pretrained model. Vision transformers have shown promising results in various computer vision tasks, and their ability to capture global context could enhance anomaly detection.
+
+\textbf{Evaluating Performance on Larger Datasets and Faster GPUs:} One of the limitations of models like PatchCore is the requirement for substantial memory to store patch-level features, which can lead to longer training and inference times. This is also true for other models we tested along with different backbones, which can take sometimes days to train. Therefore, future research should evaluate these models on larger datasets, using faster \glspl{gpu} with more memory to better understand their scalability and performance in high-volume industrial applications. Evaluating their performance on larger and more diverse datasets would also help to determine their robustness and adaptability to various defect types.
+
+\textbf{Deployment in Real-World Scenarios}: Finally, the deployment of these models in real-world scenarios is an important future direction. Testing the models in an actual production environment would provide insights into their real-time performance, robustness, and ability to adapt to changing conditions. Challenges such as integration with existing quality assurance pipelines, real-time inference, and handling of various product types and defect characteristics should be explored.
+
+\chapter{Conclusion}
+
+The goal of this thesis was to compare different unsupervised learning model for image classification of \gls{pcb} images, with the objective to outperform the baseline \gls{yolo} model which is currently being used by Siemens. \gls{yolo}, which is a supervised learning model, requires labeled datasets, which can be quite time consuming and costly due to the requirement of subject expert for the annotation, it can be particularly challenging when the defects are quite rare. To address these limitations, we explored unsupervised learning models for anomaly detection. We experimented with several unsupervised models, including PatchCore, \gls{dfm}, \gls{dfkde}, EfficientAD and FastFlow. We also evaluated their performance on different metrics like accuracy, F1-score to name a few. Among all the models, PatchCore gave the most competitive results, providing a great alternative to the baseline model.
+
+While none of the unsupervised models could outperform the baseline YOLO model, this study remains significant in highlighting the potential of unsupervised anomaly detection. In particular, PatchCore provided competitive performance without the need of labeled data. EfficientAD, although more computationally efficient, struggled to match PatchCore's accuracy due to its lightweight architecture, making it more suitable for scenarios where speed is prioritized over accuracy. \gls{dfm} and \gls{dfkde}, while showing moderate performance, were less effective in capturing complex defect patterns compared to PatchCore. These insights highlights that while \gls{yolo} remains the most accurate, unsupervised models like PatchCore offer a valuable trade-off between performance and the need for labeled data, particularly in environments where labeling is infeasible.
+
+Looking ahead, the findings of this thesis can be highly useful in real-world applications, particularly in quality assurance processes where anomaly detection is critical.  This work lays the foundation for moving towards unsupervised version of image classification for \glspl{pcb} in industrial settings. This study shows that unsupervised models like PatchCore can serve as a good approach for anomaly detection without relying on labeled datasets. By evaluation of these models, we demonstrated how effective anomaly detection can be achieved in environments with limited data, overcoming challenges such as high labeling costs, and need for subject-matter expertise. The insights gained from these models provide a foundation for developing more scalable, autonomous, and cost-effective quality control solutions for manufacturing, where balancing accuracy, efficiency, and cost is essential.
