--- a/Rohit_Master_Thesis/1.Introduction.tex
+++ b/Rohit_Master_Thesis/1.Introduction.tex
@@ -3,6 +3,11 @@
 
 Intro will come here
 
+\section{Current Solution at Siemens}
+\label{subsec:current solution at siemens}
+
+Before presenting the problem statement, first we give an overview of current supervised solution which is implemented in Siemens AG.
+
 \begin{figure}[ht!]
     \centering
     \includegraphics[width=1\linewidth]{Images/Solution_Pipeline.png}
@@ -10,14 +15,11 @@ Intro will come here
     \label{fig:solution pipeline}
 \end{figure}
 
-\section{Current Solution at Siemens}
-\label{subsec:current solution at siemens}
-
-Before presenting the problem statement, first we give an overview of current supervised solution which is implemented in Siemens AG.
-
 \section{Thesis Objective}
 
 Write thesis objective here
 
 \section{Thesis Outline}
-This thesis comprises of three main chapters: Theoretical Background, Methodology, and Results \& Discussion.-
+This thesis comprises of three main chapters: Theoretical Background, Methodology, and Results \& Discussion.
+
+This thesis comprises of seven chapters, with each building one
