--- a/Rohit_Master_Thesis/bibliography.bib
+++ b/Rohit_Master_Thesis/bibliography.bib
@@ -507,4 +507,12 @@
   number={5},
   pages={756-795},
   keywords={Deep learning;Principal component analysis;Neural networks;Machine learning;Anomaly detection;Data models;Image reconstruction;Unsupervised learning;Classification;Artificial intelligence;Kernel;Anomaly detection (AD);deep learning;explainable artificial intelligence;interpretability;kernel methods;neural networks;novelty detection;one-class classification;outlier detection;out-of-distribution (OOD) detection;unsupervised learning.},
-  doi={10.1109/JPROC.2021.3052449}}
+  doi={10.1109/JPROC.2021.3052449}
+}
+
+@article{oquab2023dinov2,
+  title={Dinov2: Learning robust visual features without supervision},
+  author={Oquab, Maxime and Darcet, Timoth{\'e}e and Moutakanni, Th{\'e}o and Vo, Huy and Szafraniec, Marc and Khalidov, Vasil and Fernandez, Pierre and Haziza, Daniel and Massa, Francisco and El-Nouby, Alaaeldin and others},
+  journal={arXiv preprint arXiv:2304.07193},
+  year={2023}
+}
