--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -43,3 +43,4 @@
 \newabbreviation{fre}{FRE}{Frequentist}
 \newabbreviation{deit}{DeiT}{Data-Efficient Image transformer}
 \newabbreviation{cait}{CaiT}{Class-Attention in Image Transformer}
+\newabbreviation{aoi}{AOI}{Automated Optical Inspection}
