--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -44,3 +44,7 @@
 \newabbreviation{deit}{DeiT}{Data-Efficient Image transformer}
 \newabbreviation{cait}{CaiT}{Class-Attention in Image Transformer}
 \newabbreviation{aoi}{AOI}{Automated Optical Inspection}
+\newabbreviation{nlp}{NLP}{Natural Language Processing}
+\newabbreviation{mlp}{MLP}{Multi-Layer Perceptron}
+\newabbreviation{msa}{MSA}{Multiheaded Self-Attention}
+\newabbreviation{ln}{LN}{Layer Normalization}
