--- a/Rohit_Master_Thesis/CV.tex
+++ b/Rohit_Master_Thesis/CV.tex
@@ -11,7 +11,7 @@ CV
 \medskip
 
 {\sc \Large
-Myfirstname Mylastname
+Rohit Potdukhe
 }
 
 \end{center}
@@ -24,10 +24,10 @@ Myfirstname Mylastname
 
 \subsection*{\sc Personal data}
 \begin{tabular}{lp{9cm}}
-Name & Myfirstname Mylastname\\
-Born &  Day of birth\\
-Adress & street number \\
-        & zip code city
+Name & Rohit Potdukhe\\
+Born &  29 June 1997\\
+Address & Henkestrasse 5 \\
+        & 91054
 \end{tabular}
 \smallskip
 
