--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -105,7 +105,7 @@
     at the Faculty of Sciences of\\ Friedrich-Alexander-Universität
     Erlangen-Nürnberg\\[1cm]
     in Cooperation with\\ Siemens AG, Berlin, Germany\\[1cm]
-    submitted on 01-07-2024 \\[3mm] %TODO
+    submitted on 22-10-2024 \\[3mm] %TODO
     by \textbf{Rohit Potdukhe} %TODO
     \vfill
     \normalsize
@@ -141,8 +141,8 @@ Die Arbeit beinhaltet vertrauliche Informationen, die der Geheimhaltun unterlieg
     \section*{Acknowledgements}
 \end{center}
 \sloppy
-First and foremost, I would like to thank my advisor, Dr. Majid Mortazavi, for his invaluable guidance, support, and encouragement throughout the course of my research. His insights and expertise were crucial to the successful completion of this work.
-I am also deeply grateful to my supervisor, Prof. Dr. Enrique Zuazua, for his continuous support, constructive feedback, and for always being available to discuss ideas and provide guidance.
+First and foremost, I would like to thank my supervisor, Dr. Majid Mortazavi, for his invaluable guidance, support, and encouragement throughout the course of my research. His insights and expertise were crucial to the successful completion of this work.
+I am also deeply grateful to my advisor, Prof. Dr. Enrique Zuazua, for his continuous support, constructive feedback, and for always being available to discuss ideas and provide guidance.
 I would like to extend my gratitude to Siemens AG, Berlin, Germany, for providing me with the opportunity to conduct my research in collaboration with their team and for providing me with the required resources.
 Finally my heartfelt thanks go to my family and friends for their unwavering support, patience, and understanding throughout this journey. Their encouragement has been a source of strength for me.
 
@@ -213,13 +213,13 @@ has not yet been submitted to any examination authority in the same or a similar
 \vspace{4\baselineskip}
 
 \noindent
-Erlangen, \today \hspace*{2cm} my signature
+Erlangen, \today \hspace*{2cm} Rohit Potdukhe
 
 % Lebenslauf
 
-\clearpage
-\input{CV}
-\addcontentsline{toc}{section}{Curriculum Vitae}
+%\clearpage
+%\input{CV}
+%\addcontentsline{toc}{section}{Curriculum Vitae}
 \end{document}
 
 
