--- a/Rohit_Master_Thesis/abbreviations.tex
+++ b/Rohit_Master_Thesis/abbreviations.tex
@@ -48,3 +48,4 @@
 \newabbreviation{mlp}{MLP}{Multi-Layer Perceptron}
 \newabbreviation{msa}{MSA}{Multiheaded Self-Attention}
 \newabbreviation{ln}{LN}{Layer Normalization}
+\newabbreviation{ml}{ML}{Machine Learning}
