--- a/Rohit_Master_Thesis/bibliography.bib
+++ b/Rohit_Master_Thesis/bibliography.bib
@@ -555,3 +555,9 @@
   pages={32--42},
   year={2021}
 }
+
+@misc{geeksforgeeks-sup-unsup,
+  author = {GeeksforGeeks},
+  title = {Supervised and Unsupervised Learning},
+  url = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
+}
